--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.6.95" !default;
+$mdi-version:          "3.7.94" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -97,6 +97,8 @@ $mdi-icons: (
     "alarm-light": F78E,
     "alarm-light-outline": FBC6,
     "alarm-multiple": F022,
+    "alarm-note": FE8E,
+    "alarm-note-off": FE8F,
     "alarm-off": F023,
     "alarm-plus": F024,
     "alarm-snooze": F68D,
@@ -347,6 +349,8 @@ $mdi-icons: (
     "arrow-left-circle-outline": FCBA,
     "arrow-left-drop-circle": F052,
     "arrow-left-drop-circle-outline": F053,
+    "arrow-left-right": FE90,
+    "arrow-left-right-bold": FE91,
     "arrow-left-right-bold-outline": F9C0,
     "arrow-left-thick": F04E,
     "arrow-right": F054,
@@ -367,9 +371,13 @@ $mdi-icons: (
     "arrow-split-vertical": F93B,
     "arrow-top-left": F05B,
     "arrow-top-left-bold-outline": F9C2,
+    "arrow-top-left-bottom-right": FE92,
+    "arrow-top-left-bottom-right-bold": FE93,
     "arrow-top-left-thick": F9C3,
     "arrow-top-right": F05C,
     "arrow-top-right-bold-outline": F9C4,
+    "arrow-top-right-bottom-left": FE94,
+    "arrow-top-right-bottom-left-bold": FE95,
     "arrow-top-right-thick": F9C5,
     "arrow-up": F05D,
     "arrow-up-bold": F736,
@@ -382,6 +390,8 @@ $mdi-icons: (
     "arrow-up-box": F6C2,
     "arrow-up-circle": FCBD,
     "arrow-up-circle-outline": FCBE,
+    "arrow-up-down": FE96,
+    "arrow-up-down-bold": FE97,
     "arrow-up-down-bold-outline": F9C7,
     "arrow-up-drop-circle": F062,
     "arrow-up-drop-circle-outline": F063,
@@ -396,6 +406,7 @@ $mdi-icons: (
     "atlassian": F803,
     "atm": FD23,
     "atom": F767,
+    "atom-variant": FE98,
     "attachment": F066,
     "audio-video": F93C,
     "audiobook": F067,
@@ -427,9 +438,13 @@ $mdi-icons: (
     "babel": FA24,
     "baby": F06C,
     "baby-buggy": F68E,
+    "baby-face": FE99,
+    "baby-face-outline": FE9A,
     "backburger": F06D,
     "backspace": F06E,
     "backspace-outline": FB38,
+    "backspace-reverse": FE9B,
+    "backspace-reverse-outline": FE9C,
     "backup-restore": F06F,
     "badminton": F850,
     "bag-personal": FDF3,
@@ -445,6 +460,7 @@ $mdi-icons: (
     "bandcamp": F674,
     "bank": F070,
     "bank-minus": FD8C,
+    "bank-outline": FE9D,
     "bank-plus": FD8D,
     "bank-remove": FD8E,
     "bank-transfer": FA26,
@@ -530,6 +546,7 @@ $mdi-icons: (
     "behance": F099,
     "bell": F09A,
     "bell-alert": FD35,
+    "bell-alert-outline": FE9E,
     "bell-circle": FD36,
     "bell-circle-outline": FD37,
     "bell-off": F09B,
@@ -591,8 +608,12 @@ $mdi-icons: (
     "book-open-page-variant": F5DA,
     "book-open-variant": F0BE,
     "book-outline": FB40,
+    "book-play": FE9F,
+    "book-play-outline": FEA0,
     "book-plus": F5DB,
     "book-remove": FA96,
+    "book-search": FEA1,
+    "book-search-outline": FEA2,
     "book-variant": F0BF,
     "bookmark": F0C0,
     "bookmark-check": F0C1,
@@ -607,6 +628,14 @@ $mdi-icons: (
     "bookmark-plus": F0C5,
     "bookmark-plus-outline": F0C4,
     "bookmark-remove": F0C6,
+    "boom-gate": FEA3,
+    "boom-gate-alert": FEA4,
+    "boom-gate-alert-outline": FEA5,
+    "boom-gate-down": FEA6,
+    "boom-gate-down-outline": FEA7,
+    "boom-gate-outline": FEA8,
+    "boom-gate-up": FEA9,
+    "boom-gate-up-outline": FEAA,
     "boombox": F5DC,
     "bootstrap": F6C5,
     "border-all": F0C7,
@@ -723,6 +752,8 @@ $mdi-icons: (
     "calendar-range-outline": FB44,
     "calendar-remove": F0F4,
     "calendar-remove-outline": FC21,
+    "calendar-repeat": FEAB,
+    "calendar-repeat-outline": FEAC,
     "calendar-search": F94B,
     "calendar-star": F9D2,
     "calendar-text": F0F5,
@@ -860,6 +891,7 @@ $mdi-icons: (
     "cellphone-link-off": F122,
     "cellphone-lock": F94E,
     "cellphone-message": F8D2,
+    "cellphone-nfc": FEAD,
     "cellphone-off": F94F,
     "cellphone-screenshot": FA34,
     "cellphone-settings": F123,
@@ -873,6 +905,7 @@ $mdi-icons: (
     "charity": FC2B,
     "chart-arc": F126,
     "chart-areaspline": F127,
+    "chart-areaspline-variant": FEAE,
     "chart-bar": F128,
     "chart-bar-stacked": F769,
     "chart-bell-curve": FC2C,
@@ -886,8 +919,11 @@ $mdi-icons: (
     "chart-line-variant": F7B0,
     "chart-multiline": F8D3,
     "chart-pie": F12B,
-    "chart-scatterplot-hexbin": F66D,
+    "chart-scatter-plot": FEAF,
+    "chart-scatter-plot-hexbin": F66D,
     "chart-timeline": F66E,
+    "chart-timeline-variant": FEB0,
+    "chart-tree": FEB1,
     "chat": FB55,
     "chat-alert": FB56,
     "chat-processing": FB57,
@@ -968,7 +1004,9 @@ $mdi-icons: (
     "christianity-outline": FCD2,
     "church": F144,
     "circle": F764,
+    "circle-double": FEB2,
     "circle-edit-outline": F8D4,
+    "circle-expand": FEB3,
     "circle-medium": F9DD,
     "circle-outline": F765,
     "circle-slice-1": FA9D,
@@ -1015,6 +1053,7 @@ $mdi-icons: (
     "clock": F953,
     "clock-alert": F954,
     "clock-alert-outline": F5CE,
+    "clock-digital": FEB4,
     "clock-end": F151,
     "clock-fast": F152,
     "clock-in": F153,
@@ -1125,6 +1164,9 @@ $mdi-icons: (
     "console-network": F8A8,
     "console-network-outline": FC3C,
     "contact-mail": F18E,
+    "contact-mail-outline": FEB5,
+    "contact-phone": FEB6,
+    "contact-phone-outline": FEB7,
     "contactless-payment": FD46,
     "contacts": F6CA,
     "contain": FA3D,
@@ -1154,6 +1196,7 @@ $mdi-icons: (
     "corn": F7B7,
     "counter": F199,
     "cow": F19A,
+    "cowboy": FEB8,
     "crane": F861,
     "creation": F1C9,
     "creative-commons": FD47,
@@ -1203,6 +1246,7 @@ $mdi-icons: (
     "currency-kzt": F864,
     "currency-ngn": F1B0,
     "currency-php": F9E5,
+    "currency-rial": FEB9,
     "currency-rub": F1B1,
     "currency-sign": F7BD,
     "currency-try": F1B2,
@@ -1245,6 +1289,7 @@ $mdi-icons: (
     "delete-circle": F682,
     "delete-circle-outline": FB64,
     "delete-empty": F6CB,
+    "delete-empty-outline": FEBA,
     "delete-forever": F5E8,
     "delete-forever-outline": FB65,
     "delete-outline": F9E6,
@@ -1316,6 +1361,7 @@ $mdi-icons: (
     "dog-service": FAAC,
     "dog-side": FA43,
     "dolby": F6B2,
+    "dolly": FEBB,
     "domain": F1D7,
     "domain-off": FD4B,
     "donkey": F7C1,
@@ -1363,10 +1409,13 @@ $mdi-icons: (
     "eight-track": F9E9,
     "eject": F1EA,
     "eject-outline": FB6D,
+    "electric-switch": FEBC,
     "elephant": F7C5,
     "elevation-decline": F1EB,
     "elevation-rise": F1EC,
     "elevator": F1ED,
+    "ellipse": FEBD,
+    "ellipse-outline": FEBE,
     "email": F1EE,
     "email-alert": F6CE,
     "email-box": FCDF,
@@ -1418,6 +1467,8 @@ $mdi-icons: (
     "engine-outline": F1FB,
     "equal": F1FC,
     "equal-box": F1FD,
+    "equalizer": FEBF,
+    "equalizer-outline": FEC0,
     "eraser": F1FE,
     "eraser-variant": F642,
     "escalator": F1FF,
@@ -1475,6 +1526,7 @@ $mdi-icons: (
     "feature-search": FA48,
     "feature-search-outline": FA49,
     "fedora": F8DA,
+    "ferris-wheel": FEC1,
     "ferry": F213,
     "file": F214,
     "file-account": F73A,
@@ -1489,11 +1541,22 @@ $mdi-icons: (
     "file-cloud": F217,
     "file-compare": F8A9,
     "file-delimited": F218,
+    "file-delimited-outline": FEC2,
     "file-document": F219,
     "file-document-box": F21A,
+    "file-document-box-check": FEC3,
+    "file-document-box-check-outline": FEC4,
+    "file-document-box-minus": FEC5,
+    "file-document-box-minus-outline": FEC6,
     "file-document-box-multiple": FAB6,
     "file-document-box-multiple-outline": FAB7,
     "file-document-box-outline": F9EC,
+    "file-document-box-plus": FEC7,
+    "file-document-box-plus-outline": FEC8,
+    "file-document-box-remove": FEC9,
+    "file-document-box-remove-outline": FECA,
+    "file-document-box-search": FECB,
+    "file-document-box-search-outline": FECC,
     "file-document-edit": FDA4,
     "file-document-edit-outline": FDA5,
     "file-document-outline": F9ED,
@@ -1508,6 +1571,7 @@ $mdi-icons: (
     "file-find-outline": FB73,
     "file-hidden": F613,
     "file-image": F21F,
+    "file-image-outline": FECD,
     "file-import": F220,
     "file-lock": F221,
     "file-move": FAB8,
@@ -1553,6 +1617,7 @@ $mdi-icons: (
     "finance": F81E,
     "find-replace": F6D3,
     "fingerprint": F237,
+    "fingerprint-off": FECE,
     "fire": F238,
     "fire-truck": F8AA,
     "firebase": F966,
@@ -1700,6 +1765,8 @@ $mdi-icons: (
     "format-list-checks": F755,
     "format-list-numbered": F27B,
     "format-list-numbered-rtl": FCE9,
+    "format-list-triangle": FECF,
+    "format-overline": FED0,
     "format-page-break": F6D6,
     "format-paint": F27C,
     "format-paragraph": F27D,
@@ -1741,6 +1808,7 @@ $mdi-icons: (
     "fountain-pen-tip": FCEF,
     "foursquare": F28E,
     "freebsd": F8DF,
+    "frequently-asked-questions": FED1,
     "fridge": F290,
     "fridge-bottom": F292,
     "fridge-outline": F28F,
@@ -1763,19 +1831,23 @@ $mdi-icons: (
     "gamepad-left": FE1D,
     "gamepad-right": FE1E,
     "gamepad-round": FE1F,
-    "gamepad-round-down": FE20,
-    "gamepad-round-left": FE21,
-    "gamepad-round-outline": FE22,
-    "gamepad-round-right": FE23,
-    "gamepad-round-up": FE24,
-    "gamepad-up": FE25,
+    "gamepad-round-down": FE7E,
+    "gamepad-round-left": FE7F,
+    "gamepad-round-outline": FE80,
+    "gamepad-round-right": FE81,
+    "gamepad-round-up": FE82,
+    "gamepad-square": FED2,
+    "gamepad-square-outline": FED3,
+    "gamepad-up": FE83,
     "gamepad-variant": F297,
+    "gamepad-variant-outline": FED4,
     "gantry-crane": FDAD,
     "garage": F6D8,
     "garage-alert": F871,
     "garage-open": F6D9,
     "gas-cylinder": F647,
     "gas-station": F298,
+    "gas-station-outline": FED5,
     "gate": F299,
     "gate-and": F8E0,
     "gate-nand": F8E1,
@@ -1784,7 +1856,7 @@ $mdi-icons: (
     "gate-or": F8E4,
     "gate-xnor": F8E5,
     "gate-xor": F8E6,
-    "gatsby": FE26,
+    "gatsby": FE84,
     "gauge": F29A,
     "gauge-empty": F872,
     "gauge-full": F873,
@@ -1813,7 +1885,7 @@ $mdi-icons: (
     "ghost": F2A0,
     "ghost-off": F9F4,
     "gif": FD54,
-    "gift": FE27,
+    "gift": FE85,
     "gift-outline": F2A1,
     "git": F2A2,
     "github-box": F2A3,
@@ -1867,6 +1939,7 @@ $mdi-icons: (
     "google-play": F2BC,
     "google-plus": F2BD,
     "google-plus-box": F2BE,
+    "google-podcast": FED6,
     "google-spreadsheet": F9F6,
     "google-street-view": FC64,
     "google-translate": F2BF,
@@ -1881,7 +1954,7 @@ $mdi-icons: (
     "grid": F2C1,
     "grid-large": F757,
     "grid-off": F2C2,
-    "grill": FE28,
+    "grill": FE86,
     "group": F2C3,
     "guitar-acoustic": F770,
     "guitar-electric": F2C4,
@@ -1894,7 +1967,7 @@ $mdi-icons: (
     "hamburger": F684,
     "hammer": F8E9,
     "hand": FA4E,
-    "hand-left": FE29,
+    "hand-left": FE87,
     "hand-okay": FA4F,
     "hand-peace": FA50,
     "hand-peace-variant": FA51,
@@ -1902,8 +1975,8 @@ $mdi-icons: (
     "hand-pointing-left": FA53,
     "hand-pointing-right": F2C7,
     "hand-pointing-up": FA54,
-    "hand-right": FE2A,
-    "hand-saw": FE2B,
+    "hand-right": FE88,
+    "hand-saw": FE89,
     "hanger": F2C8,
     "hard-hat": F96E,
     "harddisk": F2CA,
@@ -1966,6 +2039,7 @@ $mdi-icons: (
     "home": F2DC,
     "home-account": F825,
     "home-alert": F87A,
+    "home-analytics": FED7,
     "home-assistant": F7CF,
     "home-automation": F7D0,
     "home-circle": F7D1,
@@ -2040,7 +2114,7 @@ $mdi-icons: (
     "image-filter-none": F2F6,
     "image-filter-tilt-shift": F2F7,
     "image-filter-vintage": F2F8,
-    "image-frame": FE2C,
+    "image-frame": FE8A,
     "image-move": F9F7,
     "image-multiple": F2F9,
     "image-off": F82A,
@@ -2066,7 +2140,7 @@ $mdi-icons: (
     "instapaper": F2FF,
     "internet-explorer": F300,
     "invert-colors": F301,
-    "invert-colors-off": FE2D,
+    "invert-colors-off": FE8B,
     "ip": FA5E,
     "ip-network": FA5F,
     "ip-network-outline": FC6C,
@@ -2096,7 +2170,7 @@ $mdi-icons: (
     "keyboard-caps": F30E,
     "keyboard-close": F30F,
     "keyboard-off": F310,
-    "keyboard-off-outline": FE2E,
+    "keyboard-off-outline": FE8C,
     "keyboard-outline": F97A,
     "keyboard-return": F311,
     "keyboard-settings": F9F8,
@@ -2148,7 +2222,7 @@ $mdi-icons: (
     "launch": F327,
     "lava-lamp": F7D4,
     "layers": F328,
-    "layers-minus": FE2F,
+    "layers-minus": FE8D,
     "layers-off": F329,
     "layers-off-outline": F9FC,
     "layers-outline": F9FD,
@@ -2232,6 +2306,7 @@ $mdi-icons: (
     "magnify-plus": F34B,
     "magnify-plus-cursor": FA62,
     "magnify-plus-outline": F6EC,
+    "mail": FED8,
     "mail-ru": F34C,
     "mailbox": F6ED,
     "mailbox-open": FD64,
@@ -2242,6 +2317,8 @@ $mdi-icons: (
     "mailbox-up": FD69,
     "mailbox-up-outline": FD6A,
     "map": F34D,
+    "map-check": FED9,
+    "map-check-outline": FEDA,
     "map-clock": FCFA,
     "map-clock-outline": FCFB,
     "map-legend": FA00,
@@ -2427,6 +2504,7 @@ $mdi-icons: (
     "not-equal": F98C,
     "not-equal-variant": F98D,
     "note": F39A,
+    "note-circle": FEDB,
     "note-multiple": F6B7,
     "note-multiple-outline": F6B8,
     "note-outline": F39B,
@@ -2435,6 +2513,7 @@ $mdi-icons: (
     "note-text": F39E,
     "notebook": F82D,
     "notebook-multiple": FE38,
+    "notebook-outline": FEDC,
     "notification-clear-all": F39F,
     "npm": F6F6,
     "npm-variant": F98E,
@@ -2616,6 +2695,7 @@ $mdi-icons: (
     "pencil-plus-outline": FDC8,
     "pencil-remove": FDC9,
     "pencil-remove-outline": FDCA,
+    "penguin": FEDD,
     "pentagon": F6FF,
     "pentagon-outline": F700,
     "percent": F3F0,
@@ -2796,6 +2876,7 @@ $mdi-icons: (
     "radio-handheld": F43A,
     "radio-tower": F43B,
     "radioactive": F43C,
+    "radioactive-off": FEDE,
     "radiobox-blank": F43D,
     "radiobox-marked": F43E,
     "radius": FC9C,
@@ -2811,6 +2892,8 @@ $mdi-icons: (
     "read": F447,
     "receipt": F449,
     "record": F44A,
+    "record-circle": FEDF,
+    "record-circle-outline": FEE0,
     "record-player": F999,
     "record-rec": F44B,
     "rectangle": FE41,
@@ -2829,6 +2912,9 @@ $mdi-icons: (
     "reminder": F88B,
     "remote": F454,
     "remote-desktop": F8B8,
+    "remote-off": FEE1,
+    "remote-tv": FEE2,
+    "remote-tv-off": FEE3,
     "rename-box": F455,
     "reorder-horizontal": F687,
     "reorder-vertical": F688,
@@ -2872,7 +2958,8 @@ $mdi-icons: (
     "rollupjs": FB9C,
     "room-service": F88C,
     "room-service-outline": FD73,
-    "rotate-3d": F464,
+    "rotate-3d": FEE4,
+    "rotate-3d-variant": F464,
     "rotate-left": F465,
     "rotate-left-variant": F466,
     "rotate-orbit": FD74,
@@ -2895,6 +2982,7 @@ $mdi-icons: (
     "sack-percent": FD0B,
     "safe": FA69,
     "safety-goggles": FD0C,
+    "sailing": FEE5,
     "sale": F46F,
     "salesforce": F88D,
     "sass": F7EB,
@@ -2909,6 +2997,8 @@ $mdi-icons: (
     "scale-bathroom": F473,
     "scanner": F6AA,
     "scanner-off": F909,
+    "scatter-plot": FEE6,
+    "scatter-plot-outline": FEE7,
     "school": F474,
     "scissors-cutting": FA6A,
     "screen-rotation": F475,
@@ -2941,6 +3031,7 @@ $mdi-icons: (
     "security-network": F484,
     "seed": FE45,
     "seed-outline": FE46,
+    "segment": FEE8,
     "select": F485,
     "select-all": F486,
     "select-color": FD0D,
@@ -2994,6 +3085,8 @@ $mdi-icons: (
     "shield-account-outline": FA11,
     "shield-airplane": F6BA,
     "shield-airplane-outline": FCA3,
+    "shield-alert": FEE9,
+    "shield-alert-outline": FEEA,
     "shield-check": F565,
     "shield-check-outline": FCA4,
     "shield-cross": FCA5,
@@ -3251,6 +3344,7 @@ $mdi-icons: (
     "tablet": F4F6,
     "tablet-android": F4F7,
     "tablet-cellphone": F9A6,
+    "tablet-dashboard": FEEB,
     "tablet-ipad": F4F8,
     "taco": F761,
     "tag": F4F9,
@@ -3281,6 +3375,7 @@ $mdi-icons: (
     "television-classic-off": F839,
     "television-guide": F503,
     "television-off": F83A,
+    "television-play": FEEC,
     "temperature-celsius": F504,
     "temperature-fahrenheit": F505,
     "temperature-kelvin": F506,
@@ -3445,6 +3540,7 @@ $mdi-icons: (
     "unfold-more-horizontal": F54F,
     "unfold-more-vertical": F760,
     "ungroup": F550,
+    "unicode": FEED,
     "unity": F6AE,
     "unreal": F9B0,
     "untappd": F551,
@@ -3487,6 +3583,7 @@ $mdi-icons: (
     "vibrate-off": FCB5,
     "video": F567,
     "video-3d": F7FC,
+    "video-3d-variant": FEEE,
     "video-4k-box": F83D,
     "video-account": F918,
     "video-image": F919,
@@ -3502,6 +3599,8 @@ $mdi-icons: (
     "video-stabilization": F91A,
     "video-switch": F569,
     "video-vintage": FA1B,
+    "video-wireless": FEEF,
+    "video-wireless-outline": FEF0,
     "view-agenda": F56A,
     "view-array": F56B,
     "view-carousel": F56C,
