--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "3.7.94" !default;
+$mdi-version:          "3.7.95" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -3633,6 +3633,7 @@ $mdi-icons: (
     "vk-circle": F57B,
     "vlc": F57C,
     "voice": F5CB,
+    "voice-off": FEF1,
     "voicemail": F57D,
     "volleyball": F9B3,
     "volume-high": F57E,
